--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.6"
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
 
 }
