--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
 
 }
