--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,12 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.6"
     implementation "androidx.room:room-ktx:2.2.6"
     kapt "androidx.room:room-compiler:2.2.6"
-    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-
-
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
