--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.MainActivity"/>
-        <activity android:name=".students.StudentsActivity"/>
+        <activity android:name=".studentsfragment.StudentsFragment"/>
         <activity android:name=".student.StudentActivity"/>
+        <activity android:name=".home.HomeActivity"/>
 
     </application>
 
