--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
 }
